@@ -10,7 +10,7 @@ if DECT.ENABLED["signs"] then
 			icon_size = 32,
 			flags = {"placeable-neutral"},
 			render_layer = "object",
-			minable = {mining_time = 1, result = "dect-sign-wood", count = 1},
+			minable = {mining_time = 0.2, result = "dect-sign-wood", count = 1},
 			max_health = 40,
 			collision_box = {{-0.15, -0.15}, {0.15, 0.15}},
 			selection_box = {{-0.5, -0.5}, {0.5, 0.5}},
@@ -43,7 +43,7 @@ if DECT.ENABLED["signs"] then
 			icon_size = 32,
 			flags = {"placeable-neutral"},
 			render_layer = "object",
-			minable = {mining_time = 1, result = "dect-sign-steel", count = 1},
+			minable = {mining_time = 0.2, result = "dect-sign-steel", count = 1},
 			max_health = 65,
 			collision_box = {{-0.15, -0.15}, {0.15, 0.15}},
 			selection_box = {{-0.5, -0.5}, {0.5, 0.5}},
