@@ -7,8 +7,11 @@ Date: 01. 03. 2019
     - 7 new signal colours - Maroon, Brown, Olive, Emerald, Teal, Navy and Violet
     - 10 new signal icons - Light, Gun, Mine, Oil, Tank, Train, Wall, Siren, Warning shield and Warning triangle
   Changed:
+    - Reduced mining time of signs
     - Updated technology icons
     - Additional compression of Refined concrete gfx to reduce mod package size
+  Bugfixes:
+    - Fixed an issue when modded items exist that have an icon_size of less than 32 pixels
 ---------------------------------------------------------------------------------------------------
 Version: 0.9.1
 Date: 28. 02. 2019
